# ChangeLog for media-sound/qjackctl
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/qjackctl/ChangeLog,v 1.54 2008/04/28 18:09:51 armin76 Exp $

  28 Apr 2008; Raúl Porcel <armin76@gentoo.org> qjackctl-0.3.2.ebuild:
  sparc stable wrt #217726

  26 Apr 2008; nixnut <nixnut@gentoo.org> qjackctl-0.3.2.ebuild:
  Stable on ppc wrt bug 217726

  20 Apr 2008; Markus Meier <maekke@gentoo.org> qjackctl-0.3.2.ebuild:
  amd64/x86 stable, bug #217726

  14 Apr 2008; Diego Pettenò <flameeyes@gentoo.org> qjackctl-0.3.2.ebuild:
  Update deps for split Qt 4.4, see bug #217187.

*qjackctl-0.3.2 (21 Jan 2008)

  21 Jan 2008; Diego Pettenò <flameeyes@gentoo.org> +qjackctl-0.3.2.ebuild:
  Version bump to 0.3.2 version, and use eqmake4 to make sure the correct
  compiler is used.

  19 Nov 2007; Diego Pettenò <flameeyes@gentoo.org>
  -qjackctl-0.2.19a.ebuild, -qjackctl-0.2.23.ebuild:
  Remove old versions.

  19 Nov 2007; Samuli Suominen <drac@gentoo.org> qjackctl-0.3.1a.ebuild:
  amd64 stable wrt #196458

  09 Nov 2007; Raúl Porcel <armin76@gentoo.org> qjackctl-0.3.1a.ebuild:
  sparc stable wrt #196458, thanks to Alex Maclean for testing

  28 Oct 2007; nixnut <nixnut@gentoo.org> qjackctl-0.3.1a.ebuild:
  Stable on ppc wrt bug 196458

  23 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  qjackctl-0.3.1a.ebuild:
  stable x86, bug 196458

*qjackctl-0.3.1a (27 Jul 2007)

  27 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  +qjackctl-0.3.1a.ebuild:
  Version bump. this new version uses Qt 4, but still has a broken desktop file.

*qjackctl-0.2.23 (03 Jul 2007)

  03 Jul 2007; Diego Pettenò <flameeyes@gentoo.org>
  -qjackctl-0.2.20.ebuild, -qjackctl-0.2.21.ebuild, -qjackctl-0.2.22.ebuild,
  +qjackctl-0.2.23.ebuild:
  Version bump (thanks to upstream who addressed some of the issues found on
  previous ebuild); also remove old versions, .23 is the target stable for