@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST qjackctl-0.3.1a.tar.gz 253846 RMD160 019547527d63eae46d1196d69e918795d5ed0598 SHA1 b65a1117797662170a97af11b2f1d170f62b3e9f SHA256 4c15e7133562fd5762e52b6c2a4ae43bac749f0345d63f61343c4a90504aa9f4
 DIST qjackctl-0.3.2.tar.gz 264605 RMD160 0dc0638205371b49ad35883e235802da770169cf SHA1 690e77f10d934e648fbc975db81b1bccb20d7487 SHA256 6bf52fb16b0f4ec964a870444a0fee1e30345d1110955c4f3ff5dc0cd20526ae
+DIST qjackctl-0.3.3.tar.gz 268722 RMD160 fa08f02f37fb3a75ecc17471183c9aa0d4ca8e9d SHA1 27dab9f3603e1970b152dbbc8a1e02340ce8cf9c SHA256 b25fe8c64deba03140722c295131e6c19709562fbbdc11ad51331ded10103bfd
 EBUILD qjackctl-0.3.1a.ebuild 1354 RMD160 4183e0ca8443daee74afba85af5fd961d0427908 SHA1 78025067a006411a0963c655949ef989e6bbda80 SHA256 75b2e6ab9982c264f02cb9870b22dadd5682677d155350ad1d2107d0ec515cc0
 EBUILD qjackctl-0.3.2.ebuild 1568 RMD160 088b45d169ad23adcb8e912aceeedcef8dab4510 SHA1 f07834946ff0910b699ab387833161012ec97f67 SHA256 b4fb66ec5d69b6ea96290bd1fe9482a572b7092946d058bf584f1d503b9d0656
-MISC ChangeLog 7291 RMD160 a76998005871adb7c8bae5cefabcfb517025991b SHA1 1161c2e1bd70fe4bb99535779961cfb51f5e47a6 SHA256 4b6c9fbad94940c5abafd981c5fcfacfdb93ac5383607d04a8ac9ebdbc73bf0f
+EBUILD qjackctl-0.3.3.ebuild 1573 RMD160 3fdbc0889cc78eff33f125c1657e83693f280993 SHA1 7f74f1e49da4afba7910d449b175edac61d40c07 SHA256 a80dc615a5b512a6b96a063fd23cfd3c74fccc7464ba9d229ddd0ad7ac01ec1a
+MISC ChangeLog 7415 RMD160 0f5e2e0b6e1ce0e732d7b2ec653caa2dded1cf71 SHA1 3e57bb9953ff821edc62c27d76920451dc762d6a SHA256 9281e667053cd24044ec9e393855e77c01268029a03725ba3d3118fe0f277129
 MISC metadata.xml 161 RMD160 2738d17827a71b5ccbadae4c4f909d2b57d147b0 SHA1 90201ddb830142147774cc7b7b5178fbd0a9af0c SHA256 0ba191421eefd954d1efe9f6c3384e8c8d7455d35a7e79457272e1c29211b09e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkhKoP4ACgkQvFcC4BYPU0ogOgCfd7tQjcXd7cnvlumzxTj+Y1+Q
+lwgAn2CIWJ2WsSb8jBDtMQW/kbyVz+TC
+=wQw0
+-----END PGP SIGNATURE-----
