@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/qjackctl
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/qjackctl/ChangeLog,v 1.54 2008/04/28 18:09:51 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/qjackctl/ChangeLog,v 1.55 2008/06/07 14:53:26 aballier Exp $
+
+*qjackctl-0.3.3 (07 Jun 2008)
+
+  07 Jun 2008; Alexis Ballier <aballier@gentoo.org> +qjackctl-0.3.3.ebuild:
+  version bump
 
   28 Apr 2008; Raúl Porcel <armin76@gentoo.org> qjackctl-0.3.2.ebuild:
   sparc stable wrt #217726
